[package]
name = "slow_nn"
license = "MIT"
version = "0.1.22"
authors = ["Shashi Kant <shashitnak@gmail.com>"]
edition = "2018"
description = "A slow neural network library"
documentation = "https://docs.rs/slow_nn"
repository = "https://github.com/shashitnak/slow_nn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = { version = "1.0.106", features = ["derive"] }
bincode = "1.2.1"